--- a/GTG/gtk/preferences.ui
+++ b/GTG/gtk/preferences.ui
@@ -157,7 +157,7 @@
                         <property name="bottom_padding">15</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkHBox" id="prefs-vbox4">
+                          <object class="GtkBox" id="prefs-vbox4">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <child>
