--- a/GTG/gtk/browser/modifytags_dialog.ui
+++ b/GTG/gtk/browser/modifytags_dialog.ui
@@ -11,6 +11,7 @@
       <object class="GtkBox" id="modifytags_dialog_vbox">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
           <object class="GtkButtonBox" id="dialog-action_area3">
