--- a/GTG/gtk/editor/taskeditor.ui
+++ b/GTG/gtk/editor/taskeditor.ui
@@ -7,8 +7,9 @@
     <property name="default_height">400</property>
     <signal name="configure_event" handler="on_move"/>
     <child>
-      <object class="GtkVBox" id="vbox4">
+      <object class="GtkBox" id="vbox4">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkToolbar" id="task_tb1">
             <property name="visible">True</property>
@@ -345,8 +346,9 @@
     <property name="skip_pager_hint">True</property>
     <property name="transient_for">TaskEditor</property>
     <child>
-      <object class="GtkVBox" id="vbox5">
+      <object class="GtkBox" id="vbox5">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkCalendar" id="calendar1">
             <property name="visible">True</property>
