--- a/GTG/gtk/preferences.ui
+++ b/GTG/gtk/preferences.ui
@@ -11,15 +11,17 @@
       <object class="GtkBox" id="prefs-vbox1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkNotebook" id="notebook1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="show_tabs">False</property>
             <child>
-              <object class="GtkVBox" id="prefs-vbox2">
+              <object class="GtkBox" id="prefs-vbox2">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkFrame" id="prefs-frame3">
                     <property name="visible">True</property>
@@ -33,9 +35,10 @@
                         <property name="bottom_padding">15</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="prefs-vbox7">
+                          <object class="GtkBox" id="prefs-vbox7">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkCheckButton" id="pref_autostart">
                                 <property name="label" translatable="yes">Start Getting Things GNOME! on every login</property>
@@ -86,9 +89,10 @@
                         <property name="bottom_padding">15</property>
                         <property name="left_padding">12</property>
                         <child>
-                          <object class="GtkVBox" id="prefs-vbox3">
+                          <object class="GtkBox" id="prefs-vbox3">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
+                            <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkCheckButton" id="bg_color_enable">
                                 <property name="label" translatable="yes">Enable colored backgrounds in the task list</property>
