--- a/GTG/plugins/export/export.ui
+++ b/GTG/plugins/export/export.ui
@@ -8,19 +8,22 @@
     <property name="destroy_with_parent">True</property>
     <signal name="delete_event" handler="on_export_dialog_delete_event"/>
     <child>
-      <object class="GtkVBox" id="vbox3">
+      <object class="GtkBox" id="vbox3">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkBox" id="box11">
             <property name="visible">True</property>
             <property name="border_width">15</property>
             <property name="spacing">15</property>
             <child>
-              <object class="GtkVBox" id="vbox111">
+              <object class="GtkBox" id="vbox111">
                 <property name="visible">True</property>
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkVBox" id="vbox44444444444">
+                  <object class="GtkBox" id="vbox44444444444">
                     <property name="visible">True</property>
+                    <property name="orientation">vertical</property>
                     <child>
                       <object class="GtkLabel" id="label1ewegwegewg">
                         <property name="visible">True</property>
@@ -36,8 +39,9 @@
                       <object class="GtkAlignment" id="alignment3">
                         <property name="visible">True</property>
                         <child>
-                          <object class="GtkVBox" id="vbox1342342243">
+                          <object class="GtkBox" id="vbox1342342243">
                             <property name="visible">True</property>
+                            <property name="orientation">vertical</property>
                             <child>
                               <object class="GtkRadioButton" id="export_all_active_rb">
                                 <property name="label" translatable="yes">Active tasks shown in the browser</property>
@@ -99,8 +103,9 @@
                     <property name="visible">True</property>
                     <property name="top_padding">20</property>
                     <child>
-                      <object class="GtkVBox" id="vbox1343">
+                      <object class="GtkBox" id="vbox1343">
                         <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
                         <child>
                           <object class="GtkLabel" id="label1lalalla">
                             <property name="visible">True</property>
@@ -221,8 +226,9 @@
     <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_preferences_dialog_delete_event"/>
     <child>
-      <object class="GtkVBox" id="vbox1">
+      <object class="GtkBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
           <object class="GtkLabel" id="label1">
             <property name="visible">True</property>
@@ -234,8 +240,9 @@
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="vbox2">
+          <object class="GtkBox" id="vbox2">
             <property name="visible">True</property>
+            <property name="orientation">vertical</property>
             <child>
               <object class="GtkCheckButton" id="pref_chbox_menu">
                 <property name="label" translatable="yes">Put an entry in the Plugins menu</property>
