--- a/GTG/gtk/editor/taskeditor.ui
+++ b/GTG/gtk/editor/taskeditor.ui
@@ -1,25 +1,29 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkWindow" id="TaskEditor">
+    <property name="can_focus">False</property>
     <property name="title" translatable="yes">Task</property>
     <property name="default_width">450</property>
     <property name="default_height">400</property>
-    <signal name="configure_event" handler="on_move"/>
+    <signal name="configure-event" handler="on_move" swapped="no"/>
     <child>
       <object class="GtkBox" id="vbox4">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkToolbar" id="task_tb1">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkToolButton" id="mark_as_done_editor">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="is_important">True</property>
                 <property name="label" translatable="yes">Mark Done</property>
                 <property name="icon_name">gtg-task-done</property>
-                <signal name="clicked" handler="mark_as_done_clicked"/>
+                <signal name="clicked" handler="mark_as_done_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -29,9 +33,10 @@
             <child>
               <object class="GtkToolButton" id="dismiss_editor">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Dismiss</property>
                 <property name="icon_name">gtg-task-dismiss</property>
-                <signal name="clicked" handler="on_dismiss"/>
+                <signal name="clicked" handler="on_dismiss" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -41,9 +46,10 @@
             <child>
               <object class="GtkToolButton" id="delete_editor">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Delete</property>
                 <property name="icon_name">edit-delete</property>
-                <signal name="clicked" handler="delete_clicked"/>
+                <signal name="clicked" handler="delete_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -53,6 +59,7 @@
             <child>
               <object class="GtkSeparatorToolItem" id="toolbutton1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -62,9 +69,10 @@
             <child>
               <object class="GtkToolButton" id="insert_subtask">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Insert subtask</property>
                 <property name="stock_id">gtk-indent</property>
-                <signal name="clicked" handler="on_insert_subtask_clicked"/>
+                <signal name="clicked" handler="on_insert_subtask_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -74,9 +82,10 @@
             <child>
               <object class="GtkMenuToolButton" id="inserttag">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="label" translatable="yes">Insert tag</property>
                 <property name="icon_name">gtg-tag-new</property>
-                <signal name="clicked" handler="on_inserttag_clicked"/>
+                <signal name="clicked" handler="on_inserttag_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -86,6 +95,7 @@
             <child>
               <object class="GtkSeparatorToolItem" id="separator_note">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -95,20 +105,20 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="box3">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkScrolledWindow" id="scrolledtask">
                 <property name="width_request">400</property>
                 <property name="height_request">300</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="hscrollbar_policy">automatic</property>
-                <property name="vscrollbar_policy">automatic</property>
                 <child>
                   <object class="GtkTextView" id="textview">
                     <property name="visible">True</property>
@@ -121,17 +131,22 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkHSeparator" id="hseparator1">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -142,9 +157,11 @@
         <child>
           <object class="GtkBox" id="tasksidebar">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <child>
               <object class="GtkLabel" id="label2">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">Starting on</property>
                 <attributes>
@@ -153,6 +170,7 @@
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="padding">10</property>
                 <property name="position">0</property>
               </packing>
@@ -160,13 +178,14 @@
             <child>
               <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkEntry" id="startdate_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="width_chars">10</property>
-                    <signal name="changed" handler="startingdate_changed"/>
+                    <signal name="changed" handler="startingdate_changed" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -179,28 +198,32 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="on_startdate_pressed"/>
+                    <signal name="clicked" handler="on_startdate_pressed" swapped="no"/>
                     <child>
                       <object class="GtkArrow" id="arrow2">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="arrow_type">up</property>
                       </object>
                     </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">Due for</property>
                 <attributes>
@@ -217,13 +240,14 @@
             <child>
               <object class="GtkBox" id="box2">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkEntry" id="duedate_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="width_chars">10</property>
-                    <signal name="changed" handler="duedate_changed"/>
+                    <signal name="changed" handler="duedate_changed" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -236,28 +260,32 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="on_duedate_pressed"/>
+                    <signal name="clicked" handler="on_duedate_pressed" swapped="no"/>
                     <child>
                       <object class="GtkArrow" id="arrow1">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="arrow_type">up</property>
                       </object>
                     </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">3</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="label4">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="xalign">0</property>
                 <property name="label" translatable="yes">Closed on</property>
                 <attributes>
@@ -274,13 +302,14 @@
             <child>
               <object class="GtkBox" id="box4">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkEntry" id="closeddate_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="width_chars">10</property>
-                    <signal name="changed" handler="closeddate_changed"/>
+                    <signal name="changed" handler="closeddate_changed" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -293,28 +322,32 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="on_closeddate_pressed"/>
+                    <signal name="clicked" handler="on_closeddate_pressed" swapped="no"/>
                     <child>
                       <object class="GtkArrow" id="arrow3">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="arrow_type">up</property>
                       </object>
                     </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">5</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel" id="dayleft">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="xalign">1</property>
                 <property name="use_markup">True</property>
                 <property name="justify">right</property>
@@ -322,6 +355,7 @@
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="padding">10</property>
                 <property name="position">6</property>
               </packing>
@@ -329,6 +363,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">3</property>
           </packing>
         </child>
@@ -336,6 +371,7 @@
     </child>
   </object>
   <object class="GtkWindow" id="calendar">
+    <property name="can_focus">False</property>
     <property name="events">GDK_STRUCTURE_MASK | GDK_PROXIMITY_OUT_MASK</property>
     <property name="type">popup</property>
     <property name="resizable">False</property>
@@ -348,6 +384,7 @@
     <child>
       <object class="GtkBox" id="vbox5">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkCalendar" id="calendar1">
@@ -355,12 +392,15 @@
             <property name="can_focus">True</property>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkBox" id="fuzzydate_btns">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="homogeneous">True</property>
             <child>
               <object class="GtkButton" id="button_now">
@@ -370,6 +410,8 @@
                 <property name="receives_default">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -381,6 +423,8 @@
                 <property name="receives_default">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -392,11 +436,15 @@
                 <property name="receives_default">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">2</property>
               </packing>
             </child>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
