Set date from editor on focus out (Bug #1079817)

--- a/GTG/gtk/editor/taskeditor.glade
+++ b/GTG/gtk/editor/taskeditor.glade
@@ -168,6 +168,7 @@
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="width_chars">10</property>
                     <signal name="changed" handler="startingdate_changed"/>
+                    <signal name="focus-out-event" handler="startdate_focus_out"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -225,6 +226,7 @@
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="width_chars">10</property>
                     <signal name="changed" handler="duedate_changed"/>
+                    <signal name="focus-out-event" handler="duedate_focus_out"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -282,6 +284,7 @@
                     <property name="invisible_char">&#x25CF;</property>
                     <property name="width_chars">10</property>
                     <signal name="changed" handler="closeddate_changed"/>
+                    <signal name="focus-out-event" handler="closeddate_focus_out"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
